crates/whisker-driver-sys/bridge/include/whisker_mobile.h

/**
 * Borrowed UTF-8 value.
 */
typedef struct WhiskerStringRef {
  const char *ptr;
  size_t len;
} WhiskerStringRef;
/**
 * Borrowed byte value.
 */
typedef struct WhiskerBytesRef {
  const uint8_t *ptr;
  size_t len;
} WhiskerBytesRef;
/**
 * Borrowed array value.
 */
typedef struct WhiskerValueArray {
  struct WhiskerValueRaw *items;
  size_t count;
} WhiskerValueArray;
/**
 * Borrowed map value.
 */
typedef struct WhiskerValueMap {
  struct WhiskerKeyValueRaw *entries;
  size_t count;
} WhiskerValueMap;
/**
 * Payload union for [`WhiskerValueRaw`].
 */
typedef union WhiskerValueUnion {
  bool b;
  int64_t i;
  double f;
  struct WhiskerStringRef s;
  struct WhiskerBytesRef bytes;
  struct WhiskerValueArray array;
  struct WhiskerValueMap map;
} WhiskerValueUnion;
/**
 * Raw FFI form of `WhiskerValue`.
 */
typedef struct WhiskerValueRaw {
  uint8_t type;
  uint8_t _pad[7];
  union WhiskerValueUnion v;
} WhiskerValueRaw;
/**
 * String-keyed map entry.
 */
typedef struct WhiskerKeyValueRaw {
  struct WhiskerStringRef key;
  struct WhiskerValueRaw value;
} WhiskerKeyValueRaw;